--- a/ConwayTests/ConwayTests.fsproj
+++ b/ConwayTests/ConwayTests.fsproj
@@ -14,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="SampleData.fs" />
+    <Compile Include="WorldEvolveTests.fs" />
     <Compile Include="WorldCreationTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
